data/derived/fa15/progs/unify/prog2364.ml.out
Characters 116-124:
  let l = h ^ sep :: t in
              ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
